examples/good/01-three-types.elina
fn main(): void {
  var intValue: int = 13;
  printInt(intValue);

  var boolValue: bool = true;
  printBool(boolValue);

  var stringValue: string = "Hello, world!";
  printString(stringValue);
}