examples/bad/refer-to-not-visible-function.elina
fn f(argument: int): bool {
  fn g(): string {
    return "Hello, world!";
  }
  return false;
}

fn main(): void {
  var x: string = g();
}